--- a/package.json
+++ b/package.json
@@ -11,5 +11,16 @@
   ],
   "license": "MIT",
   "main": "modularscale.css",
-  "style": "modularscale.css"
+  "style": "modularscale.css",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rstacruz/modularscale.css.git"
+  },
+  "bugs": {
+    "url": "https://github.com/rstacruz/modularscale.css/issues"
+  },
+  "homepage": "https://github.com/rstacruz/modularscale.css#readme"
 }
