--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "responsive-modular-scale.css",
   "description": "Responsive typography using CSS variables",
-  "version": "0.3.0.rc.1",
+  "version": "0.3.0-rc.1",
   "author": "Rico Sta. Cruz <rico@ricostacruz.com>",
   "keywords": [
     "css",
